--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,15 @@
-Telethon==1.25.2
-setuptools
-wheel
+aiofiles
 aiohttp
-beautifulsoup4
-cfscrape
+apscheduler
+cairosvg
+cinemagoer
 cloudscraper
-pymongo[srv]
-speechrecognition
-cowpy
 colour
-cryptg
-csvfaker
-fontTools
-emoji==1.7.0
-httpx[http2]
+covid
+cowpy
+dataclasses
+DateTime
+emoji
 fonttools
 geopy
 gitpython
@@ -21,59 +17,64 @@ glitch_this
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
-gsearch
 gtts
 hachoir
 heroku3
 html-telegraph-poster
+httpx[http2]
 humanize
-jotquote
-justwatch
-kwot
-lottie
-lxml
+IMDbPY
 jikanpy
+justwatch
+lottie
 lyricsgenius
 markdown
+markdown-it-py
 motor
-patool
+moviepy
+nekos.py
+opencv-python-headless
+openai
 Pillow
 prettytable
 psutil
+psycopg2
+py-tgcalls
 pyfiglet
 PyGithub
-programmingquotes
 pygments
-psycopg2
 pylast
 pymediainfo
+PyMuPDF
 pySmartDL
+pytube
 python-barcode
-pyTelegramBotAPI==3.7.7
-pytuneteller
+python-dotenv
 pytz
 qrcode
-wget
-urlextract
-IMDbPY
-ShazamAPI
+randomstuff.py
+regex
+requests
 search-engine-parser
 selenium
+setuptools
+ShazamAPI
 spamwatch
 speedtest-cli
-sqlalchemy==1.3.23
 sqlalchemy-json
+sqlalchemy==1.3.23
 telegraph
 tgcrypto
-tswift
-PyMuPDF
+ujson
+urlextract
+user_agent
 validators
 vcsi
 wand
-wikipedia
-ujson
-yt_dlp
+wget
+youtube-search
+yt-dlp==2023.02.17
 
-git+https://github.com/buddhhu/img2html.git
+git+https://github.com/sandy1709/Telethon@betagit+https://github.com/goldsmith/Wikiedia
+git+https://github.com/sandy1709/py-googletrans
 git+https://github.com/alexmercerind/youtube-search-python
-git+https://github.com/cinemagoer/cinemagoer
