--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ services:
   worker:
     build: .
     environment:
-       APP_ID: $18109107
-       API_HASH: $e6afc7383da3a10fa16a0a9675c3e037
-       TG_BOT_TOKEN: $5502331963:AAFxJ5vyAka0onxS-UnVFhN6-iO38-i8dUE
-       STRING_SESSION: $1ApWapzMBu05Zn-e0sj5yJD0hFLnYro5myrsph4QMipOY4xtGIDEQz58gT2HT4ZEG-89wPrgnoo8yhc_3YXT37_Dp-5anoOMBlArwJu_QJktbu-_mLeQPJnBGObHLdRXBI3QKPx4hmnwhx-HnV_n749QQMPgcUbTyRb8t2hBnTpjT1YhbsnUfikVknvdBCYL7Lsa1cv2BmPUAhNopP8ct5_XCFNTjD_EQML_q7rTmM8y_ZiFQ0ASP0MG7_fTr9ny6YSVNKGnOtmjAkz6TnBIimZyQaPohklfw2IPesYbcxMiX-mHp4UxWnL6wBLRruchvTAg-UGhVH67ICp2L3TBe0xRBPDDlgCU=
-       ENV: $ANYTHING
-       TG_BOT_USERNAME: $Botpqyubot
-       DATABASE_URL: $postgres://emaqlyfh:8El0bXqfSK80NW3pXoO_DvJVDCMmuin3@snuffleupagus.db.elephantsql.com/emaqlyfh
+       APP_ID: 18109107
+       API_HASH: e6afc7383da3a10fa16a0a9675c3e037
+       TG_BOT_TOKEN: 5502331963:AAFxJ5vyAka0onxS-UnVFhN6-iO38-i8dUE
+       STRING_SESSION: 1ApWapzMBu05Zn-e0sj5yJD0hFLnYro5myrsph4QMipOY4xtGIDEQz58gT2HT4ZEG-89wPrgnoo8yhc_3YXT37_Dp-5anoOMBlArwJu_QJktbu-_mLeQPJnBGObHLdRXBI3QKPx4hmnwhx-HnV_n749QQMPgcUbTyRb8t2hBnTpjT1YhbsnUfikVknvdBCYL7Lsa1cv2BmPUAhNopP8ct5_XCFNTjD_EQML_q7rTmM8y_ZiFQ0ASP0MG7_fTr9ny6YSVNKGnOtmjAkz6TnBIimZyQaPohklfw2IPesYbcxMiX-mHp4UxWnL6wBLRruchvTAg-UGhVH67ICp2L3TBe0xRBPDDlgCU=
+       ENV: ANYTHING
+       TG_BOT_USERNAME: Botpqyubot
+       DATABASE_URL: postgres://emaqlyfh:8El0bXqfSK80NW3pXoO_DvJVDCMmuin3@snuffleupagus.db.elephantsql.com/emaqlyfh
