--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 { "name"        : "Repthon"
 , "description" : "deploy Userbot"
 , "author"      : ""
-, "version"     : ""
-, "main"        : "./start"
+, "version"     : "3.10.6"
+, "E_7_V"        : "./start"
 , "homepage"    : "https://github.com/RepthonArabic/E_7_V"
 , "license"     : "Public-domain"
 , "repository"  : "https://github.com/RepthonArabic/RepthonAr"
