--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 , "description" : "deploy Userbot"
 , "author"      : ""
 , "version"     : "3.10.6"
-, "E_7_V"        : "./start"
+, "E_7_V"        : "./start.sh"
 , "homepage"    : "https://github.com/RepthonArabic/E_7_V"
 , "license"     : "Public-domain"
 , "repository"  : "https://github.com/RepthonArabic/RepthonAr"
